# MakingTheGrade

./: .gitignore  README.md  main.py  pyproject.toml
apps/MakingAPI/: MakingAPI.csproj  MakingAPI.http  MakingAPI.sln  Program.cs  WeatherForecast.cs
apps/MakingAPI/Controllers/: WeatherForecastController.cs
apps/MakingAPI/Models/: TodoItem.cs
apps/console/: README.md  main.py
apps/console/data/: grades.json
apps/console/modules/: login.py
apps/console/modules/admin/: adminView.py
apps/console/modules/qualifiers/: qualifierView.py
apps/console/util/: utilidades.py
apps/db/: db.py  db.sql
apps/db/models/: models.py
apps/ui/: .env.example  .gitignore  DOCUMENTACION_AUTENTICACION.md  README.md  main.py  main_utf8.tmp  pyproject.toml  requirements-utf8.txt  requirements.txt
apps/ui/db/: db.py  db.sql
apps/ui/db/models/: models.py
apps/ui/db/seeds/: evidence.json
apps/ui/scripts/: check_env.py  clean_pycache.py  seed_basic.py
apps/ui/src/: main.py
apps/ui/src/API/: crud.py
apps/ui/src/components/: crud.py
apps/ui/src/modules/dashboard/: dashboardLogic.py
apps/ui/src/modules/exams/: examLogic.py
apps/ui/src/modules/login/: auth_controller.py  login.py  register.py
apps/ui/src/modules/pruebas/: pruebasLogic.py
apps/ui/src/utils/: buttonLogin.py  constants.py
apps/ui/src/views/: dashboard.py  examView.py  loading_overlay.py  login.py  nav_bar.py  pruebaPanel.py  prueba_panel.py  pruebas.py  session.py  splash.py
data/: evidence.json  grades.json  user.json
docs/: doc_api.md  doc_flet.md
modules/: login.py  mainMenu.py
modules/admin/: adminView.py
modules/qualifiers/: qualifierView.py
modules/students/: studentView.py
util/: session.py
(+1 files in other folders)
